# acuot

./: .gitignore  README.md  pyproject.toml  requirements.txt
deep/: SWFR_1D.py
examples/: barrier_constraint.ipynb  convex_curve_constraint.ipynb  moving_all_walls_constraint.ipynb  moving_barrier_constraint.ipynb  moving_barrier_constraint_horizontal.ipynb  river_example.ipynb  source_budget.ipynb  total_mass_constraint.ipynb
examples/figures/: decode_figures.py  decode_moving_barrier_density.py  moving_all_walls_density_snapshots.base64  moving_barrier_density_with_maze_snapshots.base64  moving_barrier_horizontal_density_snapshots.base64
exploratory/old/: wfr_proximal_movingbarrier.ipynb
old/examples/: Mixed_Constraints_Population_Transport_in_France.ipynb
paper/: 001-total-mass-constraint.ipynb  002-barrier-constraint.ipynb  003-convex-curve-constraint.ipynb  003-mixed-constraint-france.ipynb  004-constraints-on-control.ipynb  004-convex-curve-constraint.ipynb  005-constraints-on-control.ipynb  005-mixed-constraint-france.ipynb  006-benchmark-compute-geodesic.ipynb  006-benchmark-compute-geodesic.py
paper/results/: 2D-total-mass-rho1.npy  ain.npz  barrier-moving.npz  total-mass-inequality-le0.8.npz
proximal/: dynamicUOT.py  grids.py
proximal/code_from_jing_et_al_2022/: SWFR_main.m  WFR_main.m
src/acuot/: __init__.py  backend_extension.py  dynamicUOT.py  grids.py
tests/: test_dynamicUOT.py  test_grids.py
tests/proximal/: test_dynamicUOT.py  test_grids.py
tests/test_cases/: 2D-total-mass-rho0.npy  2D-total-mass.npz  barrier-static.npz  budget.npz  (+2 more)
(+66 files in other folders)
