[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acuot"
version = "0.1.0"
description = "Affine-Constrained Unbalanced Optimal Transport (ACUOT)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mao Nishino" }]
dependencies = [
  "numpy>=2.1",
  "scipy>=1.14",
  "POT>=0.9.5",
]

[project.optional-dependencies]
notebooks = ["matplotlib>=3.9", "ipywidgets>=8.1", "pillow>=11.0", "fiona>=1.10", "pandas>=2.2", "geopandas>=1.1", "shapely>=2.1"]

[project.urls]
Homepage = "https://github.com/mao1756/acuot"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["acuot*"]
